force-app/main/default/objects/InvoiceLine/fields/Bill_Rate__c.field-meta.xml
<CustomField>
    <fullName>Bill_Rate__c</fullName>
    <label>Bill_Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>