force-app/main/default/objects/InvoiceLine/fields/Doctor__c.field-meta.xml
<CustomField>
    <fullName>Doctor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Doctor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Invoice Lines</relationshipLabel>
    <relationshipName>Invoice_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>