force-app/main/default/objects/InvoiceLine/fields/Pay_Code__c.field-meta.xml
<CustomField>
    <fullName>Pay_Code__c</fullName>
    <label>Pay Code</label>
    <length>200</length>
    <type>Text</type>
</CustomField>