force-app/main/default/objects/InvoiceLine/fields/Quantity_Hours__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Hours__c</fullName>
    <label>Quantity_Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>