force-app/main/default/objects/InvoiceLine/fields/Timesheet__c.field-meta.xml
<CustomField>
    <fullName>Timesheet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Timesheet</label>
    <referenceTo>Timesheet__c</referenceTo>
    <relationshipLabel>Invoice Lines</relationshipLabel>
    <relationshipName>Invoice_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>